--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "react-spring": "^9.0.0",
+    "web-vitals": "^1.1.1",
+    "resize-observer-polyfill": "1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
